--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,6 +61,7 @@ body {
   flex: 1;
   max-width: 50%;
   min-width: 320px;
+  height: 85vh;
   background: rgba(255,255,255,0.05);
   border: 1px solid rgba(255,255,255,0.1);
   border-radius: 15px;
@@ -73,6 +74,10 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+#left {
+  /* height: 70%; */
+  margin-top: 20px;
 }
 .left h2 {
   font-size: 28px;
@@ -194,6 +199,7 @@ body {
 
 /* Bottom Info Boxes */
 .bottom {
+  /* height: 70%; */
   border-top: 1px solid rgba(255,255,255,0.1);
   margin-top: 20px;
   padding-top: 20px;
@@ -249,4 +255,28 @@ input::placeholder {
 button:hover {
     transform: scale(1.06);
     cursor: pointer;
+}
+
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: fit-content;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 30px;
+  background:linear-gradient(90deg,#000 50%,#0000 0) right/200% 100%;
+  animation: l21 2s infinite linear;
+}
+.loader::before {
+  content :"Loading...";
+  color: #0000;
+  padding: 0 5px;
+  background: inherit;
+  background-image: linear-gradient(90deg,#fff 50%,#000 0);
+  -webkit-background-clip:text;
+          background-clip:text;
+}
+
+@keyframes l21{
+  100%{background-position: left}
 }
